# shosei

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/agents/: shosei-explorer.toml  shosei-reviewer.toml  shosei-sync-auditor.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.serena/: project.yml
crates/: AGENTS.md
crates/shosei-cli/: Cargo.toml
crates/shosei-cli/src/: args.rs  exit_code.rs  main.rs  output.rs  prompts.rs
crates/shosei-cli/tests/: cli_smoke.rs
crates/shosei-core/: Cargo.toml
crates/shosei-core/src/: lib.rs  markdown.rs
crates/shosei-core/src/app/: build_book.rs  chapter.rs  doctor.rs  explain_config.rs  handoff.rs  init_project.rs  mod.rs  page_check.rs  preview_book.rs  reference.rs  series_sync.rs  story.rs  validate_book.rs
crates/shosei-core/src/cli_api/: mod.rs
crates/shosei-core/src/config/: mod.rs
crates/shosei-core/src/diagnostics/: mod.rs
crates/shosei-core/src/domain/: mod.rs  repo_path.rs  types.rs
crates/shosei-core/src/editorial/: mod.rs
crates/shosei-core/src/fs/: mod.rs
crates/shosei-core/src/manga/: mod.rs
crates/shosei-core/src/pipeline/: mod.rs
crates/shosei-core/src/repo/: mod.rs
crates/shosei-core/src/toolchain/: mod.rs
crates/shosei-core/templates/: agents.md  shosei-content-review.md  shosei-project-skill.md
crates/shosei-core/templates/story/: character-template.md  faction-template.md  heroes-journey-template.md  kishotenketsu-template.md  location-template.md  save-the-cat-template.md  scene-template.md  structures-readme.md  term-template.md  three-act-template.md
crates/shosei-core/tests/: book_commands.rs  chapter_commands.rs  chapter_renumber.rs  reference_commands.rs  repo_discovery.rs  story_commands.rs
docs/: AGENTS.md  README.md  concept-fulfillment-rubric.md  config-reference.md  usage.md
docs/adr/: 0001-japanese-publishing-scope.md  0002-pandoc-centered-prose-pipeline.md  0003-config-first-cli.md  0004-writing-mode-and-target-profiles.md  0005-manga-as-separate-manuscript-model.md  0006-git-first-project-model.md  0007-rust-and-cross-platform.md  0008-repository-unit-single-book-and-series.md  0009-config-discovery-and-precedence.md  0010-single-book-to-series-migration.md  0011-cli-name-shosei.md  0012-preflight-explain-and-handoff-priority.md  0013-manga-page-discovery-fallback.md  0014-cover-asset-separation.md  0015-navigation-structure-separation.md  (+27 more)
scripts/: generate-homebrew-formula.sh  generate-scoop-manifest.sh  validate-real-kindle-previewer.sh
site/: config-reference.html  contributing.html  index.html  install.html  quickstart.html  usage.html
(+27 files in other folders)
