[workspace]
members = ["crates/shosei-cli", "crates/shosei-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.6"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
printpdf = { version = "0.9.1", default-features = false, features = ["images", "png", "jpeg"] }
pulldown-cmark = "0.13"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
zip = { version = "8.2.0", default-features = false }
