[package]
name = "shosei-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shosei"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
shosei-core = { path = "../shosei-core" }

[dev-dependencies]
serde_json.workspace = true
