[package]
name = "shosei-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
printpdf.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
zip.workspace = true
